Add all recent frontend changes

--- a/add-movie.html
+++ b/add-movie.html
@@ -99,7 +99,7 @@
       }
 
       try {
-        const res = await fetch("http://localhost:3000/admin/add-movie", {
+        const res = await fetch("https://movie-booking-backend-7oy8.onrender.com/admin/add-movie", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
