--- a/add-review.html
+++ b/add-review.html
@@ -111,7 +111,7 @@
   }
 
   try {
-    const res = await fetch(`http://localhost:3000/user/rate/${movieId}`, {
+    const res = await fetch(`https://movie-booking-backend-7oy8.onrender.com/user/rate/${movieId}`, {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
