Add redirect button and update HTML

--- a/add-movie.html
+++ b/add-movie.html
@@ -81,6 +81,10 @@
     <button type="submit">Add Movie</button>
   </form>
 
+  <a href="admin-dashboard.html">
+  <button>Go to Dashboard</button>
+  </a>
+
   <script>
     document.getElementById("addMovieForm").addEventListener("submit", async function (e) {
       e.preventDefault();
