--- a/add-review.html
+++ b/add-review.html
@@ -82,6 +82,10 @@
     <button type="submit">Submit Review</button>
   </form>
 
+  <a href="movies.html">
+  <button>Back to movies</button>
+  </a>
+
   <script>
     document.getElementById("reviewForm").addEventListener("submit", async function (e) {
   e.preventDefault();
