--- a/admin-movies.html
+++ b/admin-movies.html
@@ -84,6 +84,10 @@
   <h1>ADMIN - MANAGE MOVIES</h1>
   <div id="movieContainer"></div>
 
+  <a href="admin-dashboard.html">
+  <button>Back to Dashboard</button>
+  </a>
+
   <script src="javascript/admin-movies.js"></script>
 </body>
 </html>
