--- a/getPdf.html
+++ b/getPdf.html
@@ -51,6 +51,9 @@
   </div>
 
   <button onclick="waitForImageAndDownload()">Download Ticket</button>
+  <a href="movies.html">
+  <button>Go Back</button>
+  </a>
 
 
   <script>
