--- a/watched-movies.html
+++ b/watched-movies.html
@@ -63,6 +63,10 @@
 <body>
 <h1>WATCHED  MOVIES</h1>
 <div id="movieContainer"></div>
+<a href="movies.html">
+  <button>Go Back</button>
+</a>
+
 <script src="javascript/watched-movies.js"></script>
 </body>
 </html>
